# dataset-matcher

./: .gitignore  COMPANION_SLICER_MODULE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
src/dataset_matcher/: __init__.py  exceptions.py  matcher.py
src/dataset_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: TEST_SPEC.md  conftest.py  fixture_generator.py  test_matcher.py  test_new_features.py  test_scenarios.py
